--- a/WebApp/src/pagesCss/Form.css
+++ b/WebApp/src/pagesCss/Form.css
@@ -22,15 +22,15 @@
 .background .input-text{
     position: relative;
     width: 100%;
-    height: 50px;
-    margin: 30px 0;
+    height: 6vh;
+    margin: 4vh 0;
 }
 .input-text input{
     border-style: none;
     background-color: transparent;
-    width: 300px;
-    height: 30px;
-    margin: 10px 0 20px 0;
+    width: 40%;
+    height: 60%;
+    /* margin: 10px 0 20px 0; */
     padding: 0 3px;
 }
 .input-text .longtext{
@@ -39,14 +39,15 @@
 .input-text .boxfile{
     border: 2px solid #ccc;
     width: 100%;
+    height: 50%;
 }
 label{
     font-size: 16px;
     font-style: initial;
 }
 .input-content textarea{
-    width: 600px;
-    height: 250px;
+    width: 100%;
+    height: 35vmin;
     padding: 10px;
     border: 3px solid #a5a5a5;
     border-radius: 5px;
