--- a/WebApp/src/pagesCss/Nav.css
+++ b/WebApp/src/pagesCss/Nav.css
@@ -2,7 +2,7 @@
     width: 190px;
   }
   .navbar{
-    height: 5px;
+    height: 1vh;
     background-color: rgb(248, 167, 143, 0.6);
     display: flex;
     padding: 2% 3%;
