--- a/WebApp/src/pagesCss/About.css
+++ b/WebApp/src/pagesCss/About.css
@@ -6,15 +6,14 @@
 .tabHead{
     min-height: 95vh;
     width: 100%;
-    background-image: url(src/image/citylogin.jpg);
+    background-image: url(src/image/mountain.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
 }
 .nav2 .links2{
     width: 100%;
-    height: 80px;
-    background-color: rgb(199, 79, 79, 0.8);
+    background-color: rgb(243, 90, 52);
     margin-bottom: 5vh;
 }
 .links2 .aboutul {
@@ -23,21 +22,25 @@
     justify-content: center;
     align-items: center;
     list-style: none;
+    height: 100%;
 }
 .aboutul .aboutlink{
     padding: 3vh 0;
     margin: 0 20px;
     font-size: 22px;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 .text-about{
+    margin-left: 20vh;
+    justify-content: center;
+    width: 80%;
     padding: 0 10vh;
 }
 .aboutlink{ 
     cursor: pointer;
 }
 .aboutlink:hover{
-    color: blue;
+    color: rgba(0, 102, 255, 0.979);
 }
 a{
     text-decoration: none;
