--- a/WebApp/src/pagesCss/AdminNav.css
+++ b/WebApp/src/pagesCss/AdminNav.css
@@ -1,10 +1,11 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
 .sideAdmin{
     width: 25vh;
-    background: #b34700;
+    background: #242323;
     height: 100%;
     position: fixed;
     display: flex;
@@ -14,12 +15,11 @@
     width: 87.9%; 
     position:absolute;
     left: 25vh;
-    min-height: 9vh;
     background-color: white;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: flex-end;
-    height: 9.5%;
+    height: 7.5%;
 }
 .adminbox{
     position: relative;
@@ -27,7 +27,7 @@
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: right;
+    justify-content: flex-end;
 }
 .adminbox h1{
     font-size: 22px;
@@ -38,13 +38,35 @@
     margin-right: 5%;
 }
 .ulAdmin{
-    padding-top: 4vh;
+    margin-top: 5%;
+    padding-top: 2vh;
     background-color: rgb(53, 53, 53);
     /* background: linear-gradient(to bottom, #fa8a3f,#ac3100); */
     width: 100%;
     height: 100%;
+    /* cursor: pointer; */
+}
+.ulAdmin .listAdmin{
+    font-size: 28px;
+    display: flex;
+    justify-content: center;
+    margin-top: 4%;
+}
+.sideAdmin .listAdmin {
+    width: 100%;
+    font-size: 18px;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0px;
     cursor: pointer;
 }
 .ulAdmin .listAdmin{
-    font-size: 30px;
+    margin-bottom: 10px;
+}
+
+.listAdmin:hover{
+    background: rgb(255, 255, 255);
+    color: rgb(255, 81, 0);
 }
