--- a/WebApp/src/pagesCss/Footer.css
+++ b/WebApp/src/pagesCss/Footer.css
@@ -6,7 +6,7 @@ footer {
     width: 100%;
     position: relative;
     bottom: 0;
-    background:linear-gradient(to right, #498cf0, #ec92f8);
+    background:linear-gradient(to right, #f77f0e, #530707);
     color: #fff;
     padding: 45px 0 30px;
     border-top-left-radius: 125px;
