--- a/WebApp/src/pagesCss/Nav.css
+++ b/WebApp/src/pagesCss/Nav.css
@@ -13,8 +13,19 @@
     width: 150px;
   }
   .nav-links{
-    flex: 1;
-    text-align: right;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 100%;
+  }
+  .nav-links ul{
+    display: flex;
+    list-style: none;
+    padding: 0;
+  }
+  .nav-links ul li {
+    margin: 0 8px; /* เพิ่มระยะห่างระหว่างรายการ */
+    position: relative;
   }
   .nav-links ul li{
     list-style: none;
@@ -25,7 +36,7 @@
   .nav-links ul li a{
     color: #fff;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 20px;
   }
   .nav-links ul li::after{
     content: '';
