--- a/WebApp/src/pagesCss/Footer.css
+++ b/WebApp/src/pagesCss/Footer.css
@@ -30,7 +30,7 @@ footer {
 }
 .colfooter #logo {
     width: 80px;
-    margin-bottom: 30px;
+    margin-bottom: 5%;
 }
 .colfooter h3{
     width: fit-content;
