--- a/WebApp/src/pagesCss/SubPageAdmin.css
+++ b/WebApp/src/pagesCss/SubPageAdmin.css
@@ -7,26 +7,60 @@
     left: 25vh;
     height: 100%;
 }
-.TabBtn{
-    width: 100%;
-    height: 10vh;
+.TabBtnReq{
+    width: 80%;
+    height: 5vh;
     /* border: 1px solid black; */
     display: flex;
     align-items: center;
 }
-.TabBtn .AdminBtn{
+.TabBtnReq .AdminBtnReq{
     font-size: 16px;
-    width: 5%;
+    width: 100%;
     border: none;
-    height: 40%;
+    height: 50%;
     margin-right: 1px;
     color: #fff;
     background-color: green;
     border-radius: 5px;
     position: relative;
-    left: 5%;
+    left: 15%;
     cursor: pointer;
 }
-.TabBtn .AdminBtn[name="Delete"]{
+.TabBtnReq .AdminBtnReq[name="Delete"]{
     background-color: red;
 }
+.TabBtnReq .AdminBtnReq[name="Decline"]{
+    background-color: red;
+}
+.TabBtnReq .AdminBtnReq[name="Accept"]:hover{
+    color: green;
+    background-color: white;
+}
+
+.TabBtnReq .AdminBtnReq[name="Decline"]:hover{
+    color: red;
+    background-color: white;
+}
+
+.AdminTableCheck{
+    margin-top: 3%;
+    width: 80%;
+    margin-left: 20%;
+}
+table{
+    border-collapse: collapse;
+    width: 80%;
+    border: 2px solid #000
+}
+th, td {
+    border: 1px solid #000; /* เพิ่มเส้นขอบรอบคอลัมน์ */
+    padding: 8px; /* เพิ่มขอบรอบข้อความในคอลัมน์ */
+    text-align: center; /* จัดตรงกลางข้อความในคอลัมน์ */
+  }
+
+  th {
+    background-color: #f2f2f2; /* สีพื้นหลังของส่วนหัวตาราง */
+    font-weight: bold; /* ทำให้ข้อความในส่วนหัวตารางเป็นตัวหนา */
+  }
+  
