--- a/WebApp/src/pagesCss/Home.css
+++ b/WebApp/src/pagesCss/Home.css
@@ -117,7 +117,7 @@
   }
   .col{
     flex-basis: 31%;
-    background: #b6fffb;
+    background: #ceb6ff;
     border-radius: 10px;
     margin-bottom: 5%;
     padding: 20px 12px;
